/*
** Copyright 2022 Centreon
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
**
** For more information : contact@centreon.com
*/

syntax = "proto3";

package com.centreon.broker;

/**
 * @brief A downtime is applied on a resource when we don't want notifications
 * concerning bad states on this resource.
 */
message Downtime {
  enum DowntimeType {
    NOT_USED = 0;
    SERVICE = 1;
    HOST = 2;
    ANY = 3;
  };
  uint64 id = 1;
  uint64 instance_id = 2;
  uint64 host_id = 3;
  uint64 service_id = 4;
  string author = 5;
  string comment_data = 6;
  DowntimeType type = 7;
  uint32 duration = 8;
  uint64 triggered_by = 9;
  int64 entry_time = 10;
  uint64 actual_start_time = 11;
  uint64 actual_end_time = 12;
  uint64 start_time = 13;
  uint64 deletion_time = 14;
  uint64 end_time = 15;
  bool started = 16;
  bool cancelled = 17;
  bool fixed = 18;
}
